[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.poetry]
authors = ["Red Hat"]
# Poetry automatically adds classifiers for license and Python version. See:
# https://pypi.org/classifiers/
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Testing',
]
description = "Set of tools to check receptor's binding affinity."
license = "Apache-2.0"
name = "receptor-affinity"
repository = "https://github.com/project-receptor/affinity"
version = "0.1.0"

[tool.poetry.dependencies]
attrs = "^19.3.0"
click = "^7.0"
pyparsing = "^2.4.6"
python = "^3.6"
pyyaml = "^5.3"
receptor = { git = "https://github.com/project-receptor/receptor.git" }
requests = "^2.22.0"
setuptools = "*"  # For pkg_resources
wait-for = "^1.1.1"
python-dateutil = "^2.8.1"
prometheus-client = "^0.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"
yamllint = "^1.20.0"
black = "^19.10b0"
pytest-xdist = "^1.31.0"

[tool.poetry.plugins."console_scripts"]
"affinity" = "receptor_affinity.cli:cli"
